[package]
name = "autopack"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"
categories = ["command-line-utilities", "development-tools"]
keywords = ["buildpacks", "cnb"]

[[bin]]
name = "auto-pack"
test = false


[dependencies]
clap = { version = "3.2.11", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
dialoguer = "0.10.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
npm-package-json = "0.1.3"
open = "3.0.2"
toml = "0.5"
reqwest = { version = "0.11.11", features = ["stream"] }
tempfile = "3.3.0"
indicatif = { version = "0.17.0", features = ["improved_unicode"] }
futures-util = "0.3.14"
thiserror = "1.0.32"
rmp-serde = "1.1.0"
blake2 = "0.10.4"
aes-gcm = "0.10.1"
rand = "0.8.5"
hex = "0.4.3"
libc = "0.2.132"

[target.'cfg(any(target_os="linux", target_os="macos"))'.dependencies]
flate2 = "1.0.24"
tar = "0.4.38"

[target.'cfg(target_os="windows")'.dependencies]
zip = "0.6.2"
